--- a/Dunai Krisztián/html/index.html
+++ b/Dunai Krisztián/html/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
 
-<sup>5C hőmérséklet</sup> <sub>5C hőmérséklet</sub>
+<sup>5C hőmérséklet</sup>  
+<sub>5C hőmérséklet</sub>
 
     <p>ipsum dolor sit amet, consectetur adipiscing elit. Maecenas non urna vel lorem semper vestibulum in et ante. Duis quis erat facilisis, vulputate turpis in, pulvinar nisl. <br>Cras sollicitudin volutpat eleifend. Phasellus posuere varius turpis, vitae sodales urna maximus sit amet. <i>Praesent lectus nisl, maximus sit amet viverra non, vestibulum non massa. In hac habitasse platea dictumst. Phasellus elit leo, dictum ac iaculis interdum, ornare non libero. Donec ac orci congue ipsum ullamcorper scelerisque.</i></p> 
 
