--- a/Gábor Dávid/index.html
+++ b/Gábor Dávid/index.html
@@ -1,3 +1,40 @@
-<html>
-    
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Elso weboldal</title>
+</head>
+<body>
+    <p><b>Lorem ipsum</b> dolor sit amet, consectetur adipiscing elit. Vestibulum id lectus vitae justo hendrerit tincidunt. Sed dictum tellus vel orci egestas, a lobortis mauris dignissim. Phasellus consequat ornare sem, <br>eu lacinia ante. Curabitur semper elit eros, a rhoncus lectus pretium nec. Duis velit leo, blandit ac elit in, ornare viverra nunc. Nulla suscipit cursus diam. Donec porttitor auctor velit. Donec mattis mattis justo, sit <br>amet euismod dolor convallis vitae. Vivamus volutpat, ex ut bibendum tincidunt, massa ipsum luctus mauris, ut suscipit felis lectus eu neque. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Praesent sagittis purus ac bibendum pharetra. Cras finibus mollis ligula <br>quis dignissim. Vestibulum tincidunt consectetur dui, non viverra elit sollicitu<br>din vitae. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ac facilisis tortor, vel rhoncus ex. Nam ligula ex, mollis vitae lectus eu, condimentum dignissim sem.</p>
+
+    <p>Ut sed ex vel augue pretium fringilla. Integer dictum enim et ex aliq<br>uam dignissim. Proin sed tempus erat, sit amet pellentesque purus. Nullam nulla ero<br>s, iaculis sit amet metus non, varius mattis ipsum. Proin tempus egestas ligula et tristique. Nam aliquam sapien a tortor varius commodo. Vivamus ante orci, lacinia nec nunc nec, commodo cursus risus. Phasellus fermentum nunc eget nisl dignissim, eget vestibulum nibh facilisis. Sed vulputate euism<br>od diam. Nam vel quam mi. Sed blandit dui ac nibh pulvinar porta.</p>
+
+    <p>Donec non sollicitudin ex, a vulputate felis. Suspendisse ullamcorper cursus erat. Integer sed fermentum justo. Vestibulum imperdiet nec lorem vitae eleifen<br>d. Morbi sit amet elit fringilla, condimentum sem bibendum, rhoncus libero. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mu<br>s. Nunc porttitor dapibus erat, a t<br>empor orci convallis nec. Morbi lobortis porttitor risus, ac efficitur mauris auctor sit amet. Proin fringilla risus at enim euismod sagittis. Integer a ante vel metus gravida euismod nec sit amet ex.</p>
+
+    <p>Mauris vitae erat ac mi accumsan gravida vel fer<br>mentum odio. Sed porta lorem id nisl mollis semper. Integer sed libero est. Cras accumsan augue non nulla sagittis, id aliquam ante facilisis. Suspendisse nisi lacus, sodales et varius sit amet, viverra a libero. Curabitur euismod laoreet<br> arcu eu pretium. Aenean porttitor sollicitudin laoreet.</p>
+
+    <p>Sed accumsan et nisi in euismod. Donec bibendum eros augue, sed interdum leo pharetra ac. Morbi mi enim, sagittis ac malesuada sit amet, tincidunt ac dui. Suspendisse consequat ligula <br>sed est fringilla, eu euismod odio elementum. Nulla elementum ex sed ex iaculis finibus eu nec justo. Duis sollicitudin mauris quis neque finibus tincidunt. Vivamus sed cursus sem, in auctor ex. Quisque feugiat lacinia facilisis. Etiam ut ligula eget tellus vestibulum consequat hendrerit non arcu. Don<br>ec mollis faucibus metus, quis pellentesque mauris volutpat eget.</p>
+    <hr>
+    <h1>H1-es tag</h1>
+    <h2>H2-es tag</h2>
+    <h3>H3-es tag</h3>
+    <h4>H4-es tag</h4>
+    <h5>H5-es tag</h5>
+    <h6>H6-es tag</h6>
+    <ul>
+        <li>Coffee</li>
+        <li>Tea</li>
+        <li>Milk</li>
+    </ul>
+
+    <dl>
+        <dt>Coffee</dt>
+        <dd>- black hot drink</dd>
+        <dt>Milk</dt>
+        <dd>- white cold drink</dd>
+    </dl>
+
+</body>
 </html>
