--- a/Fuglovics Konor/index1.html
+++ b/Fuglovics Konor/index1.html
@@ -22,7 +22,6 @@
     <p>Sample Text</p>
     <h5>Windows 1.0 (c) 1985 Microsoft Corp.</h5>
     <p>Cannot run PAINT.MSP</p>
-    <h6>SooS</h6>
-    <p>SeeS</p>
+    <h6 style="font-size:5%;">nigga</h6>
 </body>
 </html>
