--- a/Dunai Krisztián/html/index.html
+++ b/Dunai Krisztián/html/index.html
@@ -59,6 +59,9 @@
 
 
 
-Duis quis placerat purus. Mauris vehicula lorem ac diam viverra pulvinar vitae vel lacus. Quisque pellentesque facilisis facilisis. Duis nec lacinia ante, et posuere mi. Suspendisse nec pellentesque urna, et porttitor erat. Suspendisse potenti. Nam ac pharetra lacus. Donec fermentum erat commodo tellus pulvinar consequat. Nulla sed fringilla risus, at tempus purus. Sed aliquam magna in nisi venenatis malesuada. Aliquam consequat nunc orci, a dictum nibh pharetra in.
+  <img src="mexico.jpeg" alt="Mexico">
+
+<br>
+  <a href="https://www.w3schools.com/html/html_images.asp"">VÉHÁROMSZKÚL</a>
 </body>
 </html>
