--- a/Fuglovics Konor/index1.html
+++ b/Fuglovics Konor/index1.html
@@ -7,7 +7,10 @@
     <title>⠀</title>
 </head>
 <body>
+    <a href="https://www.w3schools.com" target="_blank">Visit W3Schools.com!</a>
+    
     <h1>404 Error</h1>
+    <img src="N7I1KG.jpg" alt="Bliss" width="192" height="120">
     <p>Lorem ipsum <b>dolor sit amet</b>, <i>consectetur</i> <sub>adipiscing</sub> <sup>elit</sup>. <br>Curabitur consequat, tortor at scelerisque vestibulum, diam urna vestibulum nisi, sed pharetra urna ante eget ligula. In.</p>
     <ul>
         <li>List 1</li>
