--- a/Dunai Krisztián/html/index.html
+++ b/Dunai Krisztián/html/index.html
@@ -59,9 +59,17 @@
 
 
 
-  <img src="mexico.jpeg" alt="Mexico">
+  <img src="https://cdnuploads.aa.com.tr/uploads/Contents/2021/11/19/thumbs_b_c_e6788312705d0302f7db157e25be8fbe.jpg" alt="Mexico" width="1200" height="50">
 
 <br>
   <a href="https://www.w3schools.com/html/html_images.asp"">VÉHÁROMSZKÚL</a>
+
+  <div class=class1>
+<h1>Fejléc cucc</h1>
+<a href="mailto:teszt@example.com">email</a>
+
+
+  </div>
+
 </body>
 </html>
