--- a/Dunai Krisztián/html/urlap.html
+++ b/Dunai Krisztián/html/urlap.html
@@ -93,10 +93,10 @@
         </li>
 
         <li>s
-            <label for="intrudiction">
+            <label for="intruduction">
                 Bemutatkozás
             </label>
-            <textarea id="intrudiction" rows="4" cols="50">Ide írj magadról pár sort!</textarea>
+            <textarea id="intrudiuction" rows="4" cols="50">Ide írj magadról pár sort!</textarea>
         </li>
 
         <li>
@@ -109,7 +109,7 @@
             <button type="submit">Elküldöm az adatokat</button>
         </li>
 
-        
+
     </ul>
 </fieldset>
 
