--- a/Kiss Zsigmond/index.html
+++ b/Kiss Zsigmond/index.html
@@ -17,6 +17,9 @@
         id quam. In hac habitasse platea dictumst. Donec porttitor eget massa non semper. Nunc non ex id nibh porta auctor ac quis erat. Phasellus laoreet mattis ex eu fringilla. Mauris vitae lacus molestie, ullamcorper quam sit amet, commodo felis. Aenean
         eget orci ornare, lacinia orci at, facilisis nunc. In hac habitasse platea dictumst. Vestibulum quam tortor, pretium et fermentum ac, mattis sit amet magna. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
         Ut varius</p>
+    <a href="https://www.w3schools.com">Visit W3Schools.com!</a>
+
+    <img src="montázs.jpg" alt="Montázs width=" 500 " height="333 ">
     <p>enim aliquam erat pulvinar placerat. Curabitur vehicula justo sagittis viverra pulvinar. Nam malesuada imperdiet tortor a tincidunt. In in dapibus sapien, at egestas urna. Nullam vel dolor finibus, hendrerit enim sed, condimentum eros. Fusce rutrum
         neque ut placerat accumsan. Pellentesque eleifend risus eget viverra luctus. Quisque rhoncus nisl eros, nec eleifend justo molestie id. Nam tempus iaculis sapien in congue. Nam ut nunc vitae justo porta pharetra. Donec at sem ac dolor vehicula
         dapibus at laoreet dolor. Aenean elementum vulputate ligula et gravida. Sed at mi et elit egestas porttitor quis id nisi. Vestibulum vel rutrum tellus. Curabitur finibus lorem posuere, maximus lorem eget, tempus mauris. Nunc sit amet sodales neque.
