--- a/Dunai Krisztián/html/erettsegi feladat/nyomtatas.html
+++ b/Dunai Krisztián/html/erettsegi feladat/nyomtatas.html
@@ -7,7 +7,7 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="nyomtatas.css">
-  <script src="nyomtatas.js"></script>>
+  <script src="nyomtatas.js"></script>
 
 
 </head>
@@ -85,14 +85,14 @@
     <option value="45">Szatén, normál, fotópapír (190g/m³)</option>
     <option value="65">Művész, kreatív, kartonpapír (300g/m³)</option>
   </select>
-  <input type="button" value="Kalkulál" onclick="kalkulal()" id="kalkulalGomb" />
-  <div>
+  <input type="button" value="Kalkulál" onclick="kalkulal();" id="kalkulalGomb" />
+  <div id="valasz">
     <p>A kalkuláció alapja:</p>
     <ul>
       <li>területe: <span id="terulet"></span> dm<sup>2</sup></li>
       <li>papírköltség: <span id="papir"></span> Ft/dm<sup>2</sup></li>
     </ul>
-    <h2><span id="koltseg">nincskész2</span> Ft</h2>
+    <h2><span id="koltseg">?</span> Ft</h2>
   </div>
 </form>
 
