kutya oldal végleges

--- a/Dunai Krisztián/nkp kutya oldal/goldi/tipusok.html
+++ b/Dunai Krisztián/nkp kutya oldal/goldi/tipusok.html
@@ -39,7 +39,7 @@
         </tr>
         </table>
 
-        <p>Forrás: <a href="hu.wikipedia.org/wiki/Golden_retriever">hu.wikipedia.org/wiki/Golden_retriever</a></p>
+        <p>Forrás: <a href="https://hu.wikipedia.org/wiki/Golden_retriever">hu.wikipedia.org/wiki/Golden_retriever</a></p>
 
         <p><a href="#eleje">Vissza az oldal tetejére</a></p>
 </body>
