--- a/Fuglovics Konor/goldi/index.html
+++ b/Fuglovics Konor/goldi/index.html
@@ -22,7 +22,13 @@
 			<img src="kepek/goldi.jpg" height="200" alt="A kutyám, aki egy golden retriever." title="Goldi, a kutyám (felnőttkorában)">
 			<img src="kepek/kolyok.jpg" height="200" alt="A kutyám kölyökkorában." title="Goldi, a kutyám (kölyökkorában)">
 		<figcaption>Fotók Goldiról</figcaption>
-	</figure>
+		</figure>
 	<p>Ha szeretnél még több kutyás fotót nézegetni, látogasd meg a <a href="http://tiny.cc/goldipix">Pixabay portál - Goldenek</a> fotó oldalát!</p>
+	<p>A videón is láthatod, hogy Goldi nagyon szeret a földön hemperegni,
+		amely miatt általában koszosan jövünk haza a sétából.</p>
+		<video controls width="400">
+		<source src="videok/goldiseta.mp4"
+		type="video/mp4">
+		</video>
 	</body>
 </html>
