--- a/Fuglovics Konor/goldi/index.html
+++ b/Fuglovics Konor/goldi/index.html
@@ -8,10 +8,12 @@
 	</head>
     <body>
 		<!-- Fuglovics Konor -->
-		<h1>A golden retriever bemutatása</h1>
+		<h1 id="eleje">A golden retriever bemutatása</h1>
+		<p class="menu"><a href="index.html">Kezdőlap</a>
+			<a href="tipusok.html"> Típusok</a></p>
 		<p>A golden retriever egy kedves, barátságos kutyafajta, mely Skóciából származik.<br>A fajta tudományos megnevezése: golden retriever – <i>Canis lupus familiaris.</i></p>
 		<h2>Előnyös tulajdonságai</h2>
-		<p><strong>Fontos!</strong> Ha gazdi szeretnél lenni, nézz utána, hogy a <em>felelős</em> kutyatartással kapcsolatban milyen ajánlások és kötelezettségek vannak!</p>
+			<p><strong>Fontos!</strong> Ha gazdi szeretnél lenni, nézz utána, hogy a <em>felelős</em> kutyatartással kapcsolatban milyen ajánlások és kötelezettségek vannak!</p>
 		<ul>
 			<li>Okos, könnyen képezhető</li>
 			<li>Szelíd, családbarát</li>
@@ -30,5 +32,6 @@
 		<source src="videok/goldiseta.mp4"
 		type="video/mp4">
 		</video>
+	<p><a href="#eleje">Vissza az oldal tetejére</a></p>
 	</body>
 </html>
