--- a/Dunai Krisztián/játék weboldal/index.html
+++ b/Dunai Krisztián/játék weboldal/index.html
@@ -6,6 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Counter-Strike: Global Offensive</title>
+        <meta name="description" content="CSGO Weboldal">
 		<link rel="stylesheet" href="css/alap.css">
         <link rel="icon" type="image/x-icon" href="static/1433429848_preview_ics.png">
 	</head>
