--- a/Gábor Dávid/Sajat weboldal/index.html
+++ b/Gábor Dávid/Sajat weboldal/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
-    <title>Weboldal</title>
+    <title>League of Legends weboldal</title>
 </head>
 <body>
     <div class="topnav">
-        <a class="active" href="#">Főoldal</a>
-        <a href="#">Báttya</a>
+        <a class="active" href="index.html">Főoldal</a>
+        <a href="index2.html">Gábor Dávid</a>
       </div>
       
       <div style="padding-left:16px">
@@ -26,12 +26,16 @@
         <div>
 
         <a>Világ legrosszabb játéka <font color="red">NEM</font> ajánlom senkinek.</a><br>
-        <a>Kopaszodást, idegbetegséget, függőséget okoz!</a><br>
+        <a>Kopaszodást, idegbetegséget és függőséget okoz!</a><br>
+        <a>Sok pénzt elvesz és az életed 90%-át is romokba dönti.</a><br>
         <a>Ha valaki azt mondja, próbáld ki akkor hugyozd telibe!</a><br><br>
-        <a>Ha netán még is beleestél abba a hibába, hogy letöltötted</a><br>
-        <a>itt egy videó, hogyan kell letörölni.</a>
+        <a>Ha netán mégis beleestél abba a hibába, hogy letöltötted</a><br>
+        <a>itt egy videó, hogyan kell <font color="red">letörölni</font>.</a>
         <br><br>
         
-        <a href="https://www.youtube.com/watch?v=EjHKIJ90FtY">Kattints rám :)</a>
+        <div class="link">
+         <a href="https://www.youtube.com/watch?v=EjHKIJ90FtY" target="_blank">Tovább a videóra</a>
+         </div>
+ 
 </body>
 </html>
