--- a/Fuglovics Konor/weboldal.html
+++ b/Fuglovics Konor/weboldal.html
@@ -23,7 +23,7 @@
     <p>Tipp 3</p>
     <figure>
         <img src="" alt="tipp3 kép">
-        <figcaption></figcaption>
+        <figcaption>Amikor több ellenség jön feléd, a rakétással fellövöd magadat az égbe és 2 rakétával meg tudod ölni őket (ha csak jól tudsz célozni!)</figcaption>
     </figure>
 
 </body>
