--- a/Balogh Ádám/weboldal/index.html
+++ b/Balogh Ádám/weboldal/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
         <title>Witcher 3</title>
-		<link rel="stylesheet" href="css/goldi.css">
+		<link rel="stylesheet" href="css/witcher.css">
 	</head>
      <body>    
 <!-- Balogh Ádám -->
