--- a/Gábor Dávid/goldi potlas/index.html
+++ b/Gábor Dávid/goldi potlas/index.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" href="css/goldi.css">
 	</head>
      <body>    
-<!-- Dunai Krisztián -->
+<!-- Gábor Dávid -->
 <p class="menu"><a href="index.html">Kezdőlap</a>
 	<a href="tipusok.html"> Típusok</a></p>
 <h1 id="bevezeto">A <bold>golden retriever </bold>bemutatása</h1>
