--- a/Fuglovics Konor/boxmodell.html
+++ b/Fuglovics Konor/boxmodell.html
@@ -8,7 +8,10 @@
     <title>BoxModel</title>
 </head>
 <body>
-    <div>
+    <div class=box>
+        <div class=header-image>
+            
+        </div>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sit amet sollicitudin dui, non lacinia turpis. Praesent odio quam, iaculis ac fringilla a, dignissim eu metus. Vivamus vel gravida lorem. Mauris venenatis ac nunc vitae accumsan. Suspendisse viverra nibh metus, ac pretium lorem laoreet sed. Suspendisse vulputate, velit nec rutrum facilisis, nisl enim pellentesque justo, vitae tincidunt nunc enim nec ipsum. Nunc eu felis nisl. Aliquam posuere massa eget maximus scelerisque. Nullam id risus id lacus placerat lacinia ac eu mi. Phasellus tincidunt mauris nunc, id lobortis metus pharetra vitae.
     </div>
 </body>
