--- a/Fuglovics Konor/boxmodell.html
+++ b/Fuglovics Konor/boxmodell.html
@@ -8,6 +8,7 @@
     <title>BoxModel</title>
 </head>
 <body>
+    <style>@import url('https://fonts.googleapis.com/css2?family=Oswald&display=swap');</style>
     <div class=box>
         <div class=header-image>
             
@@ -15,15 +16,17 @@
         <div class=box-content>
             <h2>Hív a természet!</h2>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sit amet sollicitudin dui, non lacinia turpis. Praesent odio quam, iaculis ac fringilla a, dignissim eu metus. Vivamus vel gravida lorem. Mauris venenatis ac nunc vitae accumsan. Suspendisse viverra nibh metus, ac pretium lorem laoreet sed. Suspendisse vulputate, velit nec rutrum facilisis, nisl enim pellentesque justo, vitae tincidunt nunc enim nec ipsum. Nunc eu felis nisl. Aliquam posuere massa eget maximus scelerisque. Nullam id risus id lacus placerat lacinia ac eu mi. Phasellus tincidunt mauris nunc, id lobortis metus pharetra vitae.
+        <p class=details><a href="https://hu.wikipedia.org/wiki/Term%C3%A9szet" target=blank>Link teszt</a></p>
         </div>
     </div>
     <div class=box2>
         <div class=header-image2>
             
         </div>
-        <div class=box-content>
+        <div class=box-content2>
             <h2>Hív a természet!</h2>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sit amet sollicitudin dui, non lacinia turpis. Praesent odio quam, iaculis ac fringilla a, dignissim eu metus. Vivamus vel gravida lorem. Mauris venenatis ac nunc vitae accumsan. Suspendisse viverra nibh metus, ac pretium lorem laoreet sed. Suspendisse vulputate, velit nec rutrum facilisis, nisl enim pellentesque justo, vitae tincidunt nunc enim nec ipsum. Nunc eu felis nisl. Aliquam posuere massa eget maximus scelerisque. Nullam id risus id lacus placerat lacinia ac eu mi. Phasellus tincidunt mauris nunc, id lobortis metus pharetra vitae.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sit amet sollicitudin dui, non lacinia turpis. Praesent odio quam, iaculis ac fringilla a, dignissim eu metus. Vivamus vel gravida lorem. Mauris venenatis ac nunc vitae accumsan. Suspendisse viverra nibh metus, ac pretium lorem laoreet sed. Suspendisse vulputate, velit nec rutrum facilisis, nisl enim pellentesque justo, vitae tincidunt nunc enim nec ipsum. Nunc eu felis nisl. Aliquam posuere massa eget maximus scelerisque. Nullam id risus id lacus placerat lacinia ac eu mi. Phasellus tincidunt mauris nunc, id lobortis metus pharetra vitae.
+            <p class=details><a href="https://www.youtube.com/TheSoundCrafterCompany" target=blank>Hivatkozás Teszt</a></p>
         </div>
     </div>
 </body>
