--- a/Kis-Fodor Zsombor/html/random Pontiac Firebird oldal/firstgen.html
+++ b/Kis-Fodor Zsombor/html/random Pontiac Firebird oldal/firstgen.html
@@ -20,8 +20,8 @@
     <h3 class="firstgen">leírás</h3>
 
     1967 február 23.-án adták ki a Firebirdet a Camaro után 5 hónappal. Míg a Camaronak a Mustang volt a nagy ellenfele 
-    a Firebirdnek a Cougar volt ami a Mustang kisebb testvére volt amit Ford alcége a Mercury gyártott. Az első geneáció mind a 
-    3 évben külöbözött föleg 1969-ben amikor egy arcfelvarráson ment át. 
+    a Firebirdnek a Cougar volt ami a Mustang kisebb testvére volt amit Ford alcége a Mercury gyártott. Az első generáció 
+    mind a 3 évben külöbözött föleg 1969-ben amikor egy arcfelvarráson ment át. 
 
     <!-- engines -->
     <h3 class="firstgen">motor opciók</h3>
@@ -39,9 +39,7 @@
 
     <ul>
         <li>Firebird Sprint</li>
-        <li>Firebird Sprint 326</li>
-        <li>Firebird Sprint 400</li>
-        <li>Firebird Sprint HO</li>
+        <li>Firebird 400</li>
         <li>Firebird Trans Am (csak 1969)</li>
     </ul>
 
@@ -56,8 +54,8 @@
     <!-- stories -->
     <h3 class="firstgen">1969-es Trans Am és a 8 kabrió Trans Am</h3>
     amikor bejött a Trans Am 1969-ben csak 697-et gyártottak belőle. Ezek közül 8 kabrió volt, mind a 8 gyűjtök
-    kezében van. ezeket nem nehéz felismerni mert csak egyetlen szín opcióban jött: fehér kék csíkokkal, a sima és a Sprint 
-    nem jött ebben a szín opicóban.
+    kezében van. ezeket nem nehéz felismerni mert csak egyetlen szín kombinációban jött: fehér kék csíkokkal, a sima és a Sprint 
+    nem jött ebben a szín kombinációban.
 
     <!-- pics -->
     <h3 class="firstgen">Képek</h3>
