--- a/Kis-Fodor Zsombor/html/random Pontiac Firebird oldal/secondgen.html
+++ b/Kis-Fodor Zsombor/html/random Pontiac Firebird oldal/secondgen.html
@@ -80,8 +80,9 @@
     <h3 class="secondgen">10. évfordulós Trans Am</h3>
 
     A Trans Am model 10. évfordulójára Pontiac kiadott egy speciális Tran Am-et. Mindössze csak 7,500-at csináltak belőle így nem
-    is ritka de nem is gyakori egy kocsi. Ezek közül 2 Trans Am a Daytona 500-on vot úgynevezett "Pace" kocsi. Ezek a kocsik
-    közül 1,817 kocsi a 6.6L HO Pontiac V8-assal jött ami kb. 260-280 lóerőre volt képes.
+    is ritka de nem is gyakori egy kocsi. Ezek közül 2 Trans Am a Daytona 500-on vot úgynevezett 
+    <a href="pacecar.html">"Pace"</a> kocsi. Ezek a kocsik közül 1,817 kocsi a 6.6L HO Pontiac V8-assal jött ami kb. 
+    260-280 lóerőre volt képes.
 
     <h3 class="secondgen">Turbo Trans Am</h3>
 
