--- a/Kis-Fodor Zsombor/html/random Pontiac Firebird oldal/thirdgen.html
+++ b/Kis-Fodor Zsombor/html/random Pontiac Firebird oldal/thirdgen.html
@@ -75,11 +75,18 @@
 
     <h3 class="thirdgen">Knight Rider</h3>
 
-    Knight Rider
-    
+    1982-ben rendező Glen A. Larson a Knight Rider című sorozathoz kért 4 fekete Trans Am-et amiket a stáb
+    átmodifkált a sorozat egyik főkarakterévé, a beszélő feket Trans Am KITT-é. Ez a második legimsertebb megjelenése 
+    egy Firebirdnek képernyőinken és még mindig vannak lelkes követői a sorozatnak. A sorozat nem emelte meg anyira
+    az elkelt Firebirdek számát mert nem tettek sok megejtést az autó kilétéről max egypárszor "fekete Pontiac"-nek nevezték
+    de azt is abbahagyták egy idő után a sorozatban mert emberek bementek Pontiac üzletbe, hogy megvegyék a Knight Rider kocsit.
+    utána csak "fekete T-tetős" meg hasonlónak nevezték. a sorozatból csak 4-5 autó maradt fent a többi forgatás közben összetört
+    vagy a sorozat végén bezúzták egy megállapodás miatt.
+
     <h3 class="thirdgen">Daytona 500 Trans Am</h3>
 
-    Daytona 500
+    1983-ban a Firebird lett újra a Daytona 500-as <a href="pacecar.html">"Pace"</a> kocsi. Ezért Pontiac adott egy külön 
+    csomagot ami egy replikája volt a Daytona 500-ban használt autóknak.
     
     <h3 class="thirdgen">15. évfordulós Trans Am</h3>
 
