--- a/Kis-Fodor Zsombor/html/random Pontiac Firebird oldal/pacecar.html
+++ b/Kis-Fodor Zsombor/html/random Pontiac Firebird oldal/pacecar.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="hatterFbody.css">
-    <title>F body platform</title>
+    
+    <title>Pace kocsi</title>
 </head>
 <body>
     <a href="index1.html">Vissza a Firebirdre</a> 
 
-    <p>Forrás: <a href="https://en.wikipedia.org/wiki/General_Motors_F_platform">F-body</a></p>
+    <p>Forrás: <a href="https://en.wikipedia.org/wiki/Safety_car">Pace car</a></p>
 </body>
 </html>
