--- a/Balogh Ádám/kedvenc.html
+++ b/Balogh Ádám/kedvenc.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+     
     <div class="box">
         <div class="header-image">
 
@@ -25,12 +26,19 @@
 
         </div>
         <div class="box-content" style="font-size:150%;">
-            <h2>Batman Arkhham</h2>
+            <h2 style="font-size:200%;">Batman Arkham</h2>
             A Batman: Arkham akció-kalandos videojáték-sorozat a DC Comics Batman karakterén alapul, amelyet a Rocksteady Studios és a WB Games Montréal fejlesztett ki, és eredetileg az Eidos Interactive és a Warner Bros. Interactive Entertainment publikált. A Batman Arkham sorozat négy játékból áll: Arkham Asylum, Arkham City, Arkham Origins, Arkham Knight. Emellett további kiegészítők készültek a játékhoz, és telefonra is megjelent.
             <p class="details"><a href="https://en.wikipedia.org/wiki/Batman:_Arkham" target="blank">További információ</a></p>
         </div>
     </div>
+    <div class="box box3">
+        <div class="header-image">
 
+        </div>
+        <div class="box-content" style="font-size:150%;">
+            <h2 style="font-size:200%;">Formula-1</h2>
+            A Formula 1 a legrangosabb nemzetközi autóverseny-sorozat, melynek szabályait a Nemzetközi Automobil Szövetség (FIA) határozza meg. A Formula 1-es világbajnokságban nyitott karosszériájú, együléses versenyautók vehetnek részt. A versenysorozat több állomásból, Grand Prix-ből (nagydíjból) áll, amelyeket szilárd burkolatú, erre a célra kialakított zárt, vagy városi pályákon rendeznek. Az eredmények alapján évente két világbajnokot avatnak, egy egyénit és egy konstruktőrit (csapat-világbajnokság). A versenyeket több százmillióan nézik televízión, a világ több mint kétszáz országában.
+            <p class="details"><a href="https://hu.wikipedia.org/wiki/Formula%E2%80%931" target="blank">További információ</a></p>    
 </body>
 
 </html>
