--- a/Kis-Fodor Zsombor/html/random Pontiac Firebird oldal/thirdgen.html
+++ b/Kis-Fodor Zsombor/html/random Pontiac Firebird oldal/thirdgen.html
@@ -57,9 +57,8 @@
     <h3 class="thirdgen">eredeti motor opciók</h3>
 
     A Firebird prototípus fázisában, Pontiac V8-asokkal akarták gyártani. Ez így lett volna míg GM (General Motors) bele 
-    nem szólt 1981-ben a "Céges Motorok" bevezetésével. Pl. a Turbo Trans Am a 4.9L-es V8-assal, már 1981-es promó képeken 
-    is ott volt enyire voltak kész 1982-re. Végül csak egyetlen Pontiac motor volt kaphato a 2.5L-es Pontiac I4-es 
-    "Iron Duke", 92-88 lóerőre volt képes.
+    nem szólt 1981-ben a "Céges Motorok" bevezetésével. Pl. lett volna Turbo Trans Am, a 4.9L-es turbo V8-al. 
+    Végül csak egyetlen Pontiac motor volt kapható: a 2.5L-es Pontiac I4-es "Iron Duke", 92-88 lóerőre volt képes.
 
     <h3 class="thirdgen">Recaro Trans Am</h3>
 
@@ -71,7 +70,7 @@
 
     <h3 class="thirdgen">MSE Trans Am</h3>
 
-    MSE Trans Am
+    1982-ben 
 
     <h3 class="thirdgen">Knight Rider</h3>
 
