--- a/Dunai Krisztián/Float/float.html
+++ b/Dunai Krisztián/Float/float.html
@@ -12,14 +12,25 @@
     <header>
         Receptek
     </header>
+    <div class="content">
     <nav>
-        Navigáció
+        <ul>
+            <li>Előételek</li>
+            <li>Főételek</li>
+            <li>Levesek</li>
+            <li>Desszertek</li>
+            <li>Saláták</li>
+            <li>Turmix</li>
+            <li>Sütemények</li>
+        </ul>
     </nav>
     <main>
         Tartalom
     </main>
+</div>
+
     <footer>
-        footer
+        footer    
     </footer>
 </div>
 </body>
