--- a/Balogh Ádám/float/float.html
+++ b/Balogh Ádám/float/float.html
@@ -13,15 +13,23 @@
     <header>
         Receptek
     </header>
-
+    <div class="content">
     <nav>
-        Navigáció
+        <ul>
+            <li>Előételek</li>
+            <li>Főételek</li>
+            <li>Levesek</li>
+            <li>Desszertek</li>
+            <li>Saláták</li>
+            <li>Turmixok</li>
+            <li>Sütemények</li>
+        </ul>
     </nav>
 
     <main>
         Tartalom
     </main>
-
+</div>
     <footer>
         footer
     </footer>
