--- a/Fuglovics Konor/float/float.html
+++ b/Fuglovics Konor/float/float.html
@@ -12,11 +12,19 @@
     <header>
         Receptek
     </header>
-
+    <div class=content>
     <nav>
-        Navigáció
+        <ul>
+            <li>Előételek</li>
+            <li>Főételek</li>
+            <li>Levesek</li>
+            <li>Desszertek</li>
+            <li>Saláták</li>
+            <li>Turmixok</li>
+            <li>Sütemények</li>
+        </ul>
     </nav>
-
+    </div>
     <main>
         Tartalom
     </main>
