--- a/Balogh Ádám/float/float.html
+++ b/Balogh Ádám/float/float.html
@@ -27,7 +27,12 @@
     </nav>
 
     <main>
-        Tartalom
+        <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h2>
+        <img src="pics/kaja.jpg" alt="Kaja" class="float-right" >
+        <p>Mauris tincidunt enim eget lorem volutpat semper. Aenean ut pharetra orci. Nam porttitor metus ut augue sodales laoreet. Aenean elementum odio vitae dolor fringilla, at feugiat sem vehicula.</p>
+        <p>Donec turpis ipsum, efficitur eget elit sed, feugiat commodo risus. Pellentesque volutpat arcu sed nibh mattis feugiat. Fusce viverra porttitor nibh, et mattis odio semper in. Proin volutpat velit in ipsum finibus, eu pellentesque turpis lobortis.</p>
+        <img src="pics/kaja2.jpg" alt="Kaja2" class="float-left" >
+        <p>Curabitur convallis metus ac pellentesque cursus. Pellentesque cursus urna arcu, ac vehicula risus vehicula quis. Nulla facilisi. Integer nec consequat odio, eu convallis arcu.</p>
     </main>
 </div>
     <footer>
