--- a/Fuglovics Konor/float/float.html
+++ b/Fuglovics Konor/float/float.html
@@ -26,7 +26,12 @@
     </nav>
     </div>
     <main>
-        Tartalom
+        <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h2>
+        <img src=pics/kaja.jpg alt=Kaja class=float-right>
+        <p>Aliquam venenatis viverra varius. Duis dignissim elementum ligula non elementum. Maecenas lacinia aliquam pellentesque. Nunc a risus ligula. Nam nulla ex, mattis et tincidunt a, sagittis a nulla. Duis pharetra justo elit, scelerisque aliquet nunc interdum in. In eros nunc, rutrum eu lacinia sed, aliquam vel lorem.</p> 
+        <p>Ut nec facilisis libero, at lacinia mauris. Nulla semper odio vel fermentum porttitor. Nulla pulvinar risus tortor, tincidunt congue ante venenatis non. Morbi tempus sagittis ultricies.</p>
+        <img src=pics/kaja2.jpg alt=Kaja2 class=float-left>
+        <p>Maecenas aliquam facilisis dui, vel tincidunt elit pulvinar sed. Sed eleifend finibus mi, ut scelerisque erat convallis vel. Aliquam sapien mi, tincidunt facilisis eros vel, sagittis lobortis mi.</p>
     </main>
 
     <footer>
