--- a/Kis-Fodor Zsombor/float/float.html
+++ b/Kis-Fodor Zsombor/float/float.html
@@ -16,13 +16,13 @@
 <div class="content">
     <nav>
         <ul>
-            <li>Előételek</li>
-            <li>Főételek</li>
-            <li>Levesek</li>
-            <li>Desszertek</li>
-            <li>Saláták</li>
-            <li>Turmixok</li>
-            <li>Sütemények</li>
+            <li><a href="http://">Előételek</a></li>
+            <li><a href="http://">Főételek</a></li>
+            <li><a href="http://">Levesek</a></li>
+            <li><a href="http://">Desszertek</a></li>
+            <li><a href="http://">Saláták</a></li>
+            <li><a href="http://">Turmixok</a></li>
+            <li><a href="http://">Sütemények</a></li>
         </ul>
     </nav>
 
@@ -46,11 +46,40 @@
         <p>
             Ooming!
         </p>
+        <p>
+            Hang on a second.
+        </p>
+        <p>
+            Hello?
+        </p>
+        <p>
+            - Barry?
+        </p>
+        <p>
+            - Adam?
+        </p>
+        <p>
+            - Oan you believe this is happening?
+        </p>
+        <p>
+            - I can't. I'll pick you up.
+        </p>
+        <p>
+            Looking sharp.
+        </p>
     </main>
-
-    <footer>
-        footer
-    </footer>
 </div>
+
+<footer>
+    <div class="left">
+        Copyright blah blah
+    </div>
+
+    <div class="right">
+        <a href=""> link 1 </a>
+        <a href=""> link 2 </a>
+        <a href=""> link 3 </a>
+    </div>
+</footer>
 </body>
 </html>
