--- a/Dunai Krisztián/Float/float.html
+++ b/Dunai Krisztián/Float/float.html
@@ -47,7 +47,15 @@
 
         </div>
         <footer>
-            footer
+            <div class="left">
+                Copyright duma
+            </div>
+            <div class="right">
+                <a href="">link 1</a>
+                <a href="">link 2</a>
+                <a href="">link 3</a>
+                <a href="">link 4</a>
+            </div>
         </footer>
 
     </div>
