--- a/Fuglovics Konor/float/float.html
+++ b/Fuglovics Konor/float/float.html
@@ -15,13 +15,13 @@
     <div class=content>
     <nav>
         <ul>
-            <li>Előételek</li>
-            <li>Főételek</li>
-            <li>Levesek</li>
-            <li>Desszertek</li>
-            <li>Saláták</li>
-            <li>Turmixok</li>
-            <li>Sütemények</li>
+            <li><a href="http://">Előételek</a></li>
+            <li><a href="http://">Főételek</a></li>
+            <li><a href="http://">Levesek</a></li>
+            <li><a href="http://">Desszertek</a></li>
+            <li><a href="http://">Saláták</a></li>
+            <li><a href="http://">Turmixok</a></li>
+            <li><a href="http://">Sütemények</a></li>
         </ul>
     </nav>
     </div>
@@ -35,7 +35,13 @@
     </main>
 
     <footer>
-        footer
+        <div class=left>
+            Copyright lololol
+        </div>
+        <div class=right>
+            <a href="">link1</a>
+            <a href="">link2</a>
+        </div>
     </footer>
     </div>
 </body>
