--- a/Balogh Ádám/float/float.html
+++ b/Balogh Ádám/float/float.html
@@ -16,13 +16,13 @@
     <div class="content">
     <nav>
         <ul>
-            <li>Előételek</li>
-            <li>Főételek</li>
-            <li>Levesek</li>
-            <li>Desszertek</li>
-            <li>Saláták</li>
-            <li>Turmixok</li>
-            <li>Sütemények</li>
+            <li><a href="http://">Előételek</a></li>
+            <li><a href="http://">Főételek</a></li>
+            <li><a href="http://">Levesek</a></li>
+            <li><a href="http://">Desszertek</a></li>
+            <li><a href="http://">Saláták</a></li>
+            <li><a href="http://">Turmixok</a></li>
+            <li><a href="http://">Sütemények</a></li>
         </ul>
     </nav>
 
@@ -30,13 +30,29 @@
         <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h2>
         <img src="pics/kaja.jpg" alt="Kaja" class="float-right" >
         <p>Mauris tincidunt enim eget lorem volutpat semper. Aenean ut pharetra orci. Nam porttitor metus ut augue sodales laoreet. Aenean elementum odio vitae dolor fringilla, at feugiat sem vehicula.</p>
-        <p>Donec turpis ipsum, efficitur eget elit sed, feugiat commodo risus. Pellentesque volutpat arcu sed nibh mattis feugiat. Fusce viverra porttitor nibh, et mattis odio semper in. Proin volutpat velit in ipsum finibus, eu pellentesque turpis lobortis.</p>
+        <p>ExcepteurVestibulum eu lacus est. Pellentesque velit nunc, convallis ut urna eget, rutrum suscipit quam. Sed nec egestas eros. Integer a orci eu metus gravida sodales. Quisque id dictum magna. Vestibulum ante ipsum primis in faucibus orci
+            luctus et ultrices posuere cubilia curae; In ultricies finibus enim quis consequat. Morbi laoreet velit id diam vulputate efficitur. Nullam a lorem nec quam pretium faucibus non in libero. Suspendisse velit elit, ultrices ac sollicitudin
+            in, auctor a lectus. Sed volutpat vel sem non molestie. Donec blandit, augue id congue finibus, ex purus pharetra massa, at tincidunt orci nisi sit amet magna. Suspendisse ut tincidunt diam. Nam elementum libero sit amet lobortis pulvinar.
+            Donec ornare a urna vehicula pellentesque. Morbi imperdiet non lorem vel tempus. Fusce eu interdum arcu, nec dapibus ligula. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Duis tincidunt,
+            lorem ut volutpat blandit, lectus lacus rhoncus diam, et rutrum enim justo ut dolor. Vivamus risus est, semper quis suscipit sit amet, tempus congue nulla.</p>
         <img src="pics/kaja2.jpg" alt="Kaja2" class="float-left" >
-        <p>Curabitur convallis metus ac pellentesque cursus. Pellentesque cursus urna arcu, ac vehicula risus vehicula quis. Nulla facilisi. Integer nec consequat odio, eu convallis arcu.</p>
+        <p>sed augue aliquet, interdum velit a, consectetur turpis. Sed libero tortor, semper a arcu id, rutrum tristique odio. Etiam hendrerit consequat augue sit amet malesuada. Pellentesque non egestas neque, ac porttitor tortor. Phasellus faucibus
+            sit amet orci sit amet pharetra. Maecenas et risus et arcu consectetur ultrices. Suspendisse in risus sapien. Duis nulla tortor, dictum non mauris sit amet, feugiat gravida diam. Interdum et malesuada fames ac ante ipsum primis in
+            faucibus. Vivamus eleifend, velit iaculis accumsan commodo, augue erat ultrices felis, vitae faucibus odio orci quis enim. Pellentesque elementum sit amet nisi nec euismod. Nullam non varius ipsum. Pellentesque et convallis risus,
+            a molestie metus. Pellentesque posuere interdum magna sed efficitur. Morbi elementum orci ut mattis maximus. Integer est dui, finibus et sodales congue, viverra non velit. Etiam commodo lorem neque, eget consequat ex pulvinar et. Nam
+            ultricies in ex sed egestas. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Praesent tincidunt posuere dolor, ut scelerisque neque mattis nec.</p>
     </main>
 </div>
     <footer>
-        footer
+        <div class="left">
+            Copyright duma
+        </div>
+        <div class="right">
+            <a href="">link 1</a>
+            <a href="">link 2</a>
+            <a href="">link 3</a>
+            <a href="">link 4</a>
+        </div>
     </footer>
 </div>
 </body>
