--- a/Fuglovics Konor/position/position.html
+++ b/Fuglovics Konor/position/position.html
@@ -7,7 +7,7 @@
     <link rel=stylesheet href=css/style.css>
 </head>
 <body>
-    <div class=wraper>
+    <div class=wrapper>
         <header>
             <nav>
                 <ul>
@@ -22,7 +22,11 @@
         </header>
         <main>
             <h2>Lorem Ipsum</h2>
-            <p>[looooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong text]</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus volutpat velit at suscipit ultricies. Aenean hendrerit purus sollicitudin justo venenatis, quis rutrum mi fringilla. Duis justo nulla, tristique sed sapien vitae, pulvinar porta eros. Integer ut est turpis. Donec auctor sem ligula, quis accumsan nibh hendrerit eu. Aenean tempor lacus tempus hendrerit vestibulum. Suspendisse tempor iaculis dapibus. In ut gravida elit. Maecenas eu est sodales, suscipit ligula quis, tristique ex. Vestibulum aliquam, arcu sodales gravida maximus, leo odio feugiat sem, vel aliquam libero nisl id mi. Aenean pharetra ipsum velit, vitae feugiat velit dignissim eu. Cras nec tortor vulputate, laoreet ante nec, volutpat ligula. Donec erat libero, rutrum vitae luctus ut, ullamcorper eget nulla. Duis dignissim lacus id sapien vehicula sagittis.</p>
+
+            <p>Cras dapibus, nisi vitae mattis finibus, velit dolor consectetur diam, quis dapibus odio magna non mauris. Sed ut laoreet orci. Donec sed pharetra dui. Maecenas quis volutpat neque. Morbi volutpat pharetra tempor. Quisque in nulla egestas, consequat metus vitae, elementum sapien. Etiam sit amet felis sed sapien faucibus ullamcorper. Nam mattis nulla at orci sodales, vel pretium nisl ornare. Sed id imperdiet purus. Sed nisi est, mattis eget efficitur quis, maximus sed sapien. Fusce sollicitudin odio nec imperdiet tristique. Sed eget lacus quis massa feugiat facilisis eget ac nisl.</p>
+                
+            <p>Cras id pharetra elit. Praesent commodo enim ut leo vehicula, id suscipit turpis scelerisque. Nam ut nunc nibh. Sed venenatis ex sed diam ultricies, at ultrices mauris accumsan. Cras molestie convallis lacus, condimentum cursus tellus pretium non. Proin sit amet sagittis metus, ac mollis augue. Nam nisi orci, faucibus consequat elit a, condimentum iaculis ex. Phasellus nec dui ac sapien lacinia dictum ut a dui. Sed eget justo sed sem condimentum hendrerit. Morbi maximus justo vitae rhoncus malesuada. Pellentesque vitae commodo ex. Integer nec dignissim erat. Mauris posuere ex sit amet imperdiet maximus. Nunc congue vel mi ut tristique.</p>
         </main>
     </div>
 </body>
