--- a/Fekete Zoltán/position/index.html
+++ b/Fekete Zoltán/position/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div.wraper>
+    <div class="wrapper">
         <header>
             <nav>
                 <ul>
@@ -26,6 +26,6 @@
             <p>Duis varius, tellus ac tempus sagittis, massa ex elementum quam, eget mollis lectus mi in justo. Suspendisse potenti. Etiam et lectus gravida, posuere augue in, consectetur metus. Mauris vel lorem sed nisl vestibulum fringilla a eget ante. Etiam faucibus, orci quis commodo ultrices, ipsum sapien tincidunt felis, quis dapibus nisl sem suscipit quam. Ut ornare quam sit amet massa luctus pulvinar. Praesent auctor pellentesque neque id egestas. Pellentesque non leo lobortis, interdum mi a, condimentum metus. Fusce ut nisl quis augue vestibulum sagittis. Donec ante enim, pharetra at placerat sed, tempus nec nibh. Maecenas a auctor nisi. Mauris malesuada finibus laoreet.</p>
             <p>Vestibulum in consequat orci. Curabitur augue sem, tristique ut mauris imperdiet, posuere sollicitudin lacus. Vivamus semper commodo nisi, nec facilisis mauris. Vivamus vitae molestie est. Sed commodo nunc ut ex viverra, sit amet pulvinar elit vestibulum. Pellentesque porttitor suscipit ante, et malesuada ipsum viverra non. Phasellus non placerat sem. Maecenas rhoncus vehicula enim. Praesent vitae sagittis felis.</p>
         </main>
-    </div.wraper>
+    </div class="wrapper">
 </body>
 </html>
