--- a/Balogh Ádám/kozosoldaliktprojekt/kozos.html
+++ b/Balogh Ádám/kozosoldaliktprojekt/kozos.html
@@ -23,16 +23,16 @@
             <main>
                 <h2>Counter-Strike: Global Offensive</h2>
                 <p id="CS:GO">A Counter-Strike: Global Offensive online csapatalapú first-person shooter, amelyet a Valve Corporation és a Hidden Path Entertainment fejleszt, akik korábban a Counter-Strike: Source frissítéseiért is feleltek. Ez a negyedik része a Counter-Strike sorozatnak. A Global Offensive kiadási időpontja 2012. augusztus 21. Microsoft Windows, OS X, PlayStation 3, Xbox 360 és Linux platformokon egyaránt. A hagyományos pályák mellett újabbak is megjelennek az új szereplők, fegyverek és játékmódok mellett. A játék továbbá támogatja a meccskészítést és ranglistákat is vezet. Kezdetben cross-platform többjátékos módot terveztek, ám ezt a későbbiekben elvetették. A PlayStation 3 változat DualShock 3 kontroller mellett USB-s egér és billentyűzet, illetve PlayStation Move támogatásban is részesült. 2018. december 6-án ingyenessé vált, illetve egy új, Battle Royale játékmód került bele a játékba.</p>
-                <img src="http://media.steampowered.com/apps/csgo/blog/images/fb_image.png?v=6" width="750px" height="500px">
+                <img src="/programozási alapok/202122_9d2/Balogh Ádám/kozosoldaliktprojekt/pics/csgo6.png" width="700px" height="500px">
 
                 <h2>Formula-1</h2>
                 <p id="Formula-1" >A Formula–1  a legrangosabb nemzetközi autóverseny-sorozat, melynek szabályait a Nemzetközi Automobil Szövetség (FIA) határozza meg. A Formula–1-es világbajnokságban nyitott karosszériájú, együléses versenyautók vehetnek részt. A versenysorozat több állomásból, Grand Prix-ből (nagydíjból) áll, amelyeket szilárd burkolatú, erre a célra kialakított zárt, vagy városi pályákon rendeznek. Az eredmények alapján évente két világbajnokot avatnak, egy egyénit és egy konstruktőrit (csapat-világbajnokság). A versenyeket több százmillióan nézik televízión, a világ több mint kétszáz országában.</p>
-                <img src="https://vezess2.p3k.hu/app/uploads/2022/03/f1-perez-bahrein-700x467.jpg" width="750px" height="500px">
+                <img src="/programozási alapok/202122_9d2/Balogh Ádám/kozosoldaliktprojekt/pics/f1logo2.png" width="700px" height="200px">
   
 
                 <h2>Valorant</h2>
                 <p id="Valorant">A Valorant egy ingyenes FPS shooter játék amit a Riot Games fejleszett és adott ki. Microsoft Windows platfromra.A Játék 2020 Október és 2020 Április 7,-e között zárt béta állapotban volt. A játékban két csapat van az egyiknek a bombát kell felrobanntania adott A és B ponton, a másik csapatnak ezt meg kell akadályozniuk az ellenség megölésével, vagy a bomba hatástalanításával.</p>
-                <img src="https://sm.ign.com/ign_hu/blogroll/v/valorant-r/valorant-review_xq4h.jpg" width="750px" height="500px">
+                <img src="pics/valorant2.png" width="700px" height="500px">
 
                 
 
