--- a/Fuglovics Konor/position/position.html
+++ b/Fuglovics Konor/position/position.html
@@ -12,7 +12,12 @@
             <nav>
                 <ul>
                     <li><a href="">Első</a></li>
-                    <li><a href="">Második</a></li>
+                    <li class="has submenu"><a href="">Második</a></li>
+                    <ul class=submenu>
+                        <li><a href="">1. almenü</a></li>
+                        <li><a href="">2. almenü</a></li>
+                        <li><a href="">3. almenü</a></li>
+                    </ul> 
                     <li><a href="">Harmadik</a></li>
                     <li><a href="">Negyedik</a></li>
                     <li><a href="">Ötödik</a></li>
