--- a/Fekete Zoltán/position/index.html
+++ b/Fekete Zoltán/position/index.html
@@ -13,7 +13,12 @@
             <nav>
                 <ul>
                     <li><a href="">Első</a></li>
-                    <li><a href="">Második</a></li>
+                    <li class="has-submenu"><a href="">Második</a></li>
+                    <ul class="submenu">
+                        <li><a href="">első almenüpont</a></li>
+                        <li><a href="">második almenüpont</a></li>
+                        <li><a href="">harmadik almenüpont</a></li>
+                    </ul>
                     <li><a href="">Harmadik</a></li>
                     <li><a href="">Negyedik</a></li>
                 </ul>
